--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+node-red-contrib-lot (0.2.0) unstable; urgency=medium
+
+  * Add lot.Gpio.mode input, output
+  * Implement lot.Gpio.pull_up_down
+  * Revise lot.Gpio.toggle
+  * Add check msg.payload to use configuration-chain
+  * Refactor input/output type from numbers to strings
+  * Implement lot.Gpio.drive
+
+ -- Hyeonki Hong <hhk7734@gmail.com>  Fri, 10 Jan 2020 17:03:23 +0900
+
 node-red-contrib-lot (0.1.0) unstable; urgency=medium
 
   * Implement lot.pin for <select>
