--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+node-red-contrib-lot (0.3.0) unstable; urgency=medium
+
+  * Implement lot.Gpio.analog
+  * Implement lot.Gpio.on/off
+  * Implement lot.Gpio.digital
+
+ -- Hyeonki Hong <hhk7734@gmail.com>  Mon, 13 Jan 2020 13:42:42 +0900
+
 node-red-contrib-lot (0.2.0) unstable; urgency=medium
 
   * Add lot.Gpio.mode input, output
